...

    Alert.alert(
      'Booking Options',
      `What would you like to do with this booking? ${message}`,
      [
        {
          text: 'Cancel',
          onPress: () =>
            Alert.alert(
              'Cancel Booking',
              `Are you sure you want to cancel this booking? ${message}`,
              [
                {
                  text: 'No',
                  style: 'cancel',
                },
                {
                  text: 'Yes',
                  style: 'destructive',
                  onPress: () => dispatch(cancelBooking(booking.id)),
                },
              ],
              {
                cancelable: true,
...
