appId: dev.expo.shiftcare
---
- runFlow:
    file: ../setupApp.yml
    
- runFlow:
    file: helpers/addBooking.yaml

- tapOn: "My Bookings"

- tapOn: ", Christy Schumm"

- tapOn: "Cancel"

- tapOn: "Yes"

- assertNotVisible: ", Christy Schumm"